--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
         uses: bibipkins/dotnet-test-reporter@c13c759e2c509efa3d83109f62dbb3e92697a140
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          test-results: ./RL_Test3/TestResults/
+          test-results: ./RL_Test3/TestProject1/TestResults/
           comment-title: 'Unit Test Results'
