--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test RL_Test3/TestProject1 --no-build --verbosity n --logger "trx;LogFileName=./RL_Test3/TestProject1/TestResults/mytests.trx" 
+        run: dotnet test RL_Test3/TestProject1 --no-build --verbosity n --logger trx;LogFileName=./RL_Test3/TestProject1/TestResults/mytests.trx 
         continue-on-error: true
         
       - name: Publish test results
