--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger trx
         continue-on-error: true
 
-      - name: Test Reporter
-        uses: dorny/test-reporter@v1.6.0
+      - name: Jest Github Action Reporter
+        uses: IgnusG/jest-report-action@v2.3.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           test-results: ./TestProject1/TestResults
