--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger xml
+        run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger trx
         continue-on-error: true
 
       - name: Test Reporter
@@ -30,6 +30,6 @@ jobs:
           name: JEST Tests            # Name of the check run which will be created
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # test-results: ./TestProject1/TestResults
-          path: ./TestProject1/TestResults*.xml    # Path to test results
-          reporter: jest-junit        # Format of test results
+          path: ./TestProject1/TestResults    # Path to test results
+          reporter: dotnet-trx        # Format of test results
           comment-title: 'Unit Test Results'
