--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,20 @@ jobs:
         continue-on-error: true
 
       - name: Test Reporter
-        uses: dorny/test-reporter@v1.6.0
+        uses: bibipkins/dotnet-test-reporter@c13c759e2c509efa3d83109f62dbb3e92697a140
         with:
-          name: JEST Tests            # Name of the check run which will be created
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          # test-results: ./TestProject1/TestResults
-          path: ./TestProject1/TestResults/*.trx    # Path to test results
-          reporter: dotnet-trx        # Format of test results
+          test-results: ./TestProject1/TestResults
           comment-title: 'Unit Test Results'
-          only-summary: 'true'
+# https://github.com/dorny/test-reporter
+#      - name: Test Reporter
+#        uses: dorny/test-reporter@v1.6.0
+#        with:
+ #         name: JEST Tests            # Name of the check run which will be created
+ #         github-token: ${{ secrets.GITHUB_TOKEN }}
+ #         # test-results: ./TestProject1/TestResults
+ #         path: ./TestProject1/TestResults/*.trx    # Path to test results
+  #        reporter: dotnet-trx        # Format of test results
+ #         comment-title: 'Unit Test Results'
+   #       only-summary: 'true'
+#
