--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Checkout Shared
-        uses: actions/checkout@v3
-        with:
-          repository: 'artalexmay/RL_Test_Shared'
-          token: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Checkout Shared
+#        uses: actions/checkout@v3
+ #       with:
+ #         repository: 'artalexmay/RL_Test_Shared'
+  #        token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Install dependencies
         run: dotnet restore
@@ -47,6 +47,6 @@ jobs:
         uses: bibipkins/dotnet-test-reporter@c13c759e2c509efa3d83109f62dbb3e92697a140
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          #test-results: ./TestProject1/TestResults
-          test-results: ../TestProject1/TestResults
+          test-results: ./TestProject1/TestResults
+          #test-results: ../TestProject1/TestResults
           comment-title: 'Unit Test Results'
