--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: dotnet restore
         
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build TestProject1 --configuration Release --no-restore
         
       - name: Test
         run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger trx
@@ -48,5 +48,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           #test-results: ./TestProject1/TestResults
-          test-results: ../../TestProject1/TestResults
+          test-results: ./TestProject1/TestResults
           comment-title: 'Unit Test Results'
