--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,16 +36,16 @@ jobs:
       - name: RL ath
         run: |
             echo "::group::My title"
-            echo "$PATH"
+            echo "$GITHUB_PATH"
           
       - name: Install dependencies
         run: dotnet restore
         
       - name: Build
-        run: dotnet build RL_Test3/TestProject1 --configuration Release --no-restore
+        run: dotnet build TestProject1 --configuration Release --no-restore
         
       - name: Test
-        run: dotnet test RL_Test3/TestProject1 -c Release --no-build --verbosity n --logger trx
+        run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger trx
         continue-on-error: true
 
       - name: Publish test results
