--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Checkout Shared
+      - name: Checkout RL_Test3
+        uses: actions/checkout@v3
+        with:
+          repository: 'artalexmay/RL_Test3'
+          ref: ${{ github.ref }}
+          path: 'RL_Test3'
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Checkout RL_Test_Shared
         uses: actions/checkout@v3
         with:
           repository: 'artalexmay/RL_Test_Shared'
+          path: 'RL_Test_Shared'
           token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: List all files
+        run: ls -R
+        working-directory: ${{ env.GITHUB_WORKSPACE }}
           
       - name: RL ath
         run: |
