--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: 'artalexmay/RL_Test_Shared'
-          path: 'RL_Test_Shared'
+          path: 'RL_Test3/RL_Test_Shared'
           token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: List all files
