--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: List all files
-        run: ls -R
+        run: pwd | ls -R
         working-directory: ${{ env.GITHUB_WORKSPACE }}
           
       - name: RL ath
