--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           repository: 'artalexmay/RL_Test3'
           ref: ${{ github.ref }}
           path: 'RL_Test3'
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Checkout RL Shared
         uses: actions/checkout@v3
@@ -38,7 +38,7 @@ jobs:
           repository: 'artalexmay/RL_Test_Shared'
           ref: ${{ env.SHARED_REF }}
           path: 'RL_Test_Shared'
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
     
     
     
