--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,8 +88,12 @@ jobs:
         run: pwd
         working-directory: ${{ env.GITHUB_WORKSPACE }}
           
-      - name: Install dependencies
-        run: dotnet restore
+ #     - name: Install dependencies
+ #       run: dotnet restore
+ 
+      - name: Restore dependencies
+        run: dotnet restore RL_Test3/TestProject1 -s https://api.nuget.org/v3/index.json
+        working-directory: ${{ env.GITHUB_WORKSPACE }}
         
       - name: Build
         run: dotnet build RL_Test3/TestProject1 --configuration Release --no-restore
