--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
         working-directory: ${{ env.GITHUB_WORKSPACE }}
         
       - name: Build
-        run: dotnet build RL_Test3/TestProject1 --configuration Release --no-restore
+        run: dotnet build TestProject1 --configuration Release --no-restore
         
       - name: Test
         run: dotnet test RL_Test3/TestProject1 -c Release --no-build --verbosity n --logger trx
