--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
         run: dotnet build TestProject1 --configuration Release --no-restore
         
       - name: Test
-        run: dotnet test RL_Test3/TestProject1 -c Release --no-build --verbosity n --logger trx
+        run: dotnet test TestProject1 -c Release --no-build --verbosity n --logger trx
         continue-on-error: true
 
       - name: Publish test results
