--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           repository: 'artalexmay/RL_Test_Shared'
           ref: ${{ env.SHARED_REF }}
-          path: 'RL_Test_Shared'
+          path: 'RL_Test3/RL_Test_Shared'
           token: ${{ secrets.GITHUB_TOKEN }}
     
       - name: Checkout RL WinForms
