--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,16 @@ permissions:
 
 jobs:
   init_job:
+    outputs:
+      output1: ${{ steps.init_job.outputs.test }}
+      output2: ${{ steps.init_job.outputs.test2 }}
     runs-on: ubuntu-20.04
     steps:
+      - id: step1
+        run: echo "test=hello" >> $GITHUB_OUTPUT
+      - id: step2
+        run: echo "test2=world" >> $GITHUB_OUTPUT
+        
       - name: Set env
         run: echo "TEST=$(echo $GITHUB_SHA | cut -c 1-6)" >> $GITHUB_ENV
       - name: Get env
@@ -34,6 +42,8 @@ jobs:
     runs-on: ubuntu-20.04
     needs: init_job
     steps:
+    - run: echo ${{needs.init_job.outputs.output1}} ${{needs.init_job.outputs.output2}}
+    
     - name : Print Title of PR
       run: echo "The Title of your PR is ${{ github.event.pull_request.title }} __ and TEST = ${{ env.TEST }}"
       
