--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,15 @@ jobs:
       - id: step1
         run: echo "test=hello" >> $GITHUB_OUTPUT
       - id: step2
-        run: echo "test2=world" >> $GITHUB_OUTPUT   
+        run: echo "test2=world" >> $GITHUB_OUTPUT  
+        
+      - name: Extract task id
+        env:
+          PULL_REQUEST_BODY: ${{ github.event.pull_request.body }}
+        run: |
+          TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[TPTHUB-[0-9]+" | cut -c 2-))
+          echo TASK_IDS=$TASK_IDS >> $GITHUB_ENV
+          echo "TASK_IDS = ${{ TASK_IDS }}"
 
   print_title_of_pr:
     runs-on: ubuntu-20.04
