--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - id: step2
         run: echo "test2=world" >> $GITHUB_OUTPUT  
         
+      - name : Print Title of PR
+        run: echo The Title of your PR is ${{ github.event.pull_request.title }}
+        
       - name: Extract task id
         id: step3
         env:
@@ -34,7 +37,7 @@ jobs:
           echo "PULL_REQUEST_BODY = ${{ env.PULL_REQUEST_BODY }}"
           echo "PULL_REQUEST_TITLE = ${{ env.PULL_REQUEST_TITLE }}"
           echo "TASK_IDS2 = ${{ env.TASK_IDS2 }}"
-          echo github.event.pull_request.title = $github.event.pull_request.title
+          echo github.event.pull_request.title = ${{ github.event.pull_request.title }}
           echo "github.event.pull_request.body = ${{ github.event.pull_request.body }}"
           echo "TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_ENV
           echo "test3=${{ env.TASK_IDS }}" >> $GITHUB_OUTPUT
