--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo "test2=world" >> $GITHUB_OUTPUT  
         
       - name : Print Title of PR
-        run: echo The Title of your PR is ${{ github.event.pull_request.title }}
+        run: echo "The Title of your PR is ${{ github.event.pull_request.title }}"
         
       - name: Extract task id
         id: step3
