--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           echo "PULL_REQUEST_BODY = ${{ env.PULL_REQUEST_BODY }}"
           echo "PULL_REQUEST_TITLE = ${{ env.PULL_REQUEST_TITLE }}"
           echo "TASK_IDS2 = ${{ env.TASK_IDS2 }}"
-          echo "GITHUB_ACTION_PATH = ${{GITHUB_ACTION_PATH//\\//}}"
+          echo "GITHUB_ACTION_PATH = ${GITHUB_ACTION_PATH//\\//}"
           
           echo github.event.pull_request.title = ${{ github.event.pull_request.title }}
           echo "github.event.pull_request.body = ${{ github.event.pull_request.body }}"
