--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,3 @@
-env:
-  TEST: "123"
-  TEST2: "456"
-
 on:
   push:
   pull_request_review:
@@ -34,6 +30,9 @@ jobs:
         
       - name : Print Title of PR
         run: echo "The Title of your PR is ${{ github.event.pull_request.title }}"
+        
+      - name : Print Title of PR 2
+        run: echo The Title of your PR is ${{ github.event.pull_request.title }}
         
       - name: Extract task id
         id: step3
