--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on:
   push:
-  pull_request_review:
-    types: [ submitted ]
+  pull_request:
+   types: [opened, synchronize]
 
 permissions:
   contents: read
