--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 on:
-  push:
+  #push:
   pull_request:
    types: [opened, synchronize]
 
@@ -30,6 +30,9 @@ jobs:
         
       - name : Print Title of PR
         run: echo "The Title of your PR is ${{ github.event.pull_request.title }}"
+        
+      - name : Print Title of PR 1 body 
+        run: echo "The Title of your PR is ${{ github.event.pull_request.body  }}"
         
       - name : Print Title of PR 2 body 
         run: echo The Title of your PR is ${{ github.event.pull_request.body  }}
