--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,11 @@ jobs:
         env:
           PULL_REQUEST_BODY: ${{ github.event.pull_request.body }}
           PULL_REQUEST_TITLE: ${{ github.event.pull_request.title }}
-          TASK_IDS2: "zero"
         run: |
           echo "PULL_REQUEST_BODY = ${{ env.PULL_REQUEST_BODY }}"
           echo "PULL_REQUEST_TITLE = ${{ env.PULL_REQUEST_TITLE }}"
-          echo "TASK_IDS2 = ${{ env.TASK_IDS2 }}"
-          echo "GITHUB_ACTION_PATH = ${GITHUB_ACTION_PATH//\\//}"
-          
-          echo github.event.pull_request.title = ${{ github.event.pull_request.title }}
-          echo "github.event.pull_request.body = ${{ github.event.pull_request.body }}"
+
+          echo "Output Result = TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))"
           echo "TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_ENV
           echo "test3=${{ env.TASK_IDS }}" >> $GITHUB_OUTPUT
           echo "TASK_IDS = ${{ env.TASK_IDS }}"
