--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
       output1: ${{ steps.step1.outputs.test }}
       output2: ${{ steps.step2.outputs.test2 }}
       output3: ${{ steps.step3.outputs.test3 }}
+      output_youtrack_task_id: ${{ steps.step3.outputs.youtrack_task_id }}
     runs-on: ubuntu-20.04
     steps:
       - id: step1
@@ -44,27 +45,14 @@ jobs:
           echo "PULL_REQUEST_TITLE = ${{ env.PULL_REQUEST_TITLE }}"
 
           echo "Output Result = TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))"
-          echo "TASK_IDS=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_ENV
-          echo "test3=${{ env.TASK_IDS }}" >> $GITHUB_OUTPUT
-          echo "TASK_IDS = ${{ env.TASK_IDS }}"
+          echo "youtrack_task_id=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_OUTPUT
+          echo "output_youtrack_task_id = ${{ env.output_youtrack_task_id }}"
+          #          echo "test3=${{ env.TASK_IDS }}" >> $GITHUB_OUTPUT
           
-      - run: echo "💡 The ${{ github.event.push.head_commit.message }} github.event.push.head_commit.message."
-          
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
 
   print_title_of_pr:
     runs-on: ubuntu-20.04
     needs: init_job
     steps:
     - name : Print Outputs
-      run: echo "Outputs first = ${{needs.init_job.outputs.output1}} second = ${{needs.init_job.outputs.output2}}  third = ${{needs.init_job.outputs.output3}} "    
+      run: echo "Outputs first = ${{needs.init_job.outputs.output1}} second = ${{needs.init_job.outputs.output2}}  third = ${{needs.init_job.outputs.output3}} output_youtrack_task_id = ${{needs.init_job.outputs.output_youtrack_task_id}} "    
