--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,12 @@ jobs:
           echo "PULL_REQUEST_TITLE = ${{ github.event.pull_request.title }}"
           echo "PULL_REQUEST_BODY = ${{ env.PULL_REQUEST_BODY }}"
 
-          echo "youtrack_task_id=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_OUTPUT
-          echo "output_youtrack_task_id1 = ${{ env.output_youtrack_task_id }}"
-          echo "output_youtrack_task_id3 = ${{ env.youtrack_task_id }}"    
+          echo "youtrack_task_id_local=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_ENV
+          echo "OUT = ${{ env.youtrack_task_id_local }}" 
+          echo "youtrack_task_id=${{ env.youtrack_task_id_local }} >> $GITHUB_OUTPUT
+          #echo "youtrack_task_id=($(echo ${PULL_REQUEST_BODY} | grep -Eo "\[EMAM3MT5-[0-9]+" | cut -c 2-))" >> $GITHUB_OUTPUT
+          #echo "output_youtrack_task_id1 = ${{ env.output_youtrack_task_id }}"
+          #echo "output_youtrack_task_id3 = ${{ env.youtrack_task_id }}"    
 
   print_title_of_pr:
     runs-on: windows-latest
